--- a/EasyInvoiceWeb/appsettings.json
+++ b/EasyInvoiceWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EasyInvoiceWeb-f4ec8037-3d09-4ef7-aeae-00d7cc5dbad8;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "RemoteConnection": "Server=sql.bsite.net\\MSSQL2016;Database=adesina_easyinvoiceweb;User Id=adesina_easyinvoice;Password=Testing@123;Trusted_Connection=False;MultipleActiveResultSets=true"
+    "RemoteConnection": "Server=sql.bsite.net\\MSSQL2016;Database=adesina_easyinvoiceweb;User Id=adesina_easyinvoiceweb;Password=Testing@123;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
